<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>Fakturama-Parent</artifactId>
		<groupId>com.sebulli.fakturama</groupId>
		<version>2.1.2</version>
	</parent>

	<artifactId>com.sebulli.fakturama.rcp</artifactId>
	<packaging>eclipse-plugin</packaging>

	<name>com.sebulli.fakturama.rcp</name>
	<url>https://www.fakturama.info</url>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>8</release>
				</configuration>
			</plugin>

			<plugin>
			<!--  copy version information into about.mappings -->
			<!--  see https://www.eclipse.org/forums/index.php/t/736778/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>process-about.mappings</id>
						<phase>prepare-package</phase>
						<configuration>
							<outputDirectory>${project.build.directory}</outputDirectory>
							<overwrite>true</overwrite>
							<encoding>${project.build.sourceEncoding}</encoding>
							<resources>
								<resource>
									<directory>${basedir}</directory>
									<includes>
										<include>about.mappings</include>
									</includes>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
						<goals>
							<goal>copy-resources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<additionalFileSets>
						<fileSet>
							<directory>${project.build.directory}</directory>
							<includes>
								<include>about.mappings</include>
							</includes>
						</fileSet>
					</additionalFileSets>
				</configuration>
			</plugin>
			

<!-- generate JAXB classes for entities -->
            <plugin>
                <groupId>org.jvnet.jaxb2.maven2</groupId>
                <artifactId>maven-jaxb2-plugin</artifactId>
                <version>0.14.0</version>
				<executions>
					<execution>
						<id>jaxb-webshopimport</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
		                    <!-- see https://github.com/highsource/maven-jaxb2-plugin/wiki/Do-Not-Use-forceRegenerate -->
		                    <!--  forceRegenerate>true</forceRegenerate --> 
							<verbose>true</verbose>
							<schemaDirectory>src/main/resources</schemaDirectory>
							<schemaIncludes>
                    			<include>webshop-import.xsd</include>
                			</schemaIncludes>							
							
							<generateDirectory>src-gen/main/java</generateDirectory>
							<encoding>UTF-8</encoding>
							<markGenerated>true</markGenerated>
							<locale>en</locale>
							<generatePackage>com.sebulli.fakturama.webshopimport.type</generatePackage>
						</configuration>
					</execution>
					<execution>
						<id>jaxb-qrk</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
		                    <!-- see https://github.com/highsource/maven-jaxb2-plugin/wiki/Do-Not-Use-forceRegenerate -->
		                    <!--  forceRegenerate>true</forceRegenerate --> 
							<verbose>true</verbose>
							<schemaDirectory>src/main/resources</schemaDirectory>
			                <schemaIncludes>
			                    <include>QRK-R2B.xsd</include>
			                </schemaIncludes>	
                                <!-- bindingDirectory>src/main/resources</bindingDirectory>
			                <bindingIncludes>
			                    <include>classgeneration.xjb</include>
			                </bindingIncludes-->						
			                <generateDirectory>src-gen/main/java</generateDirectory>
		                    <encoding>${encoding}</encoding>
							<markGenerated>true</markGenerated>
							<locale>en</locale>
							<generatePackage>at.ckvsoft.qrk.type</generatePackage>
						</configuration>
					</execution>
				</executions>
				
                <configuration>
                    <extension>true</extension>
                    <args>
                        <arg>-Xfluent-api</arg>
                        <arg>-Xannotate</arg>
                        <arg>-npa</arg>
                    </args>
                    <plugins>
                        <plugin>
                            <groupId>org.jvnet.jaxb2_commons</groupId>
                            <artifactId>jaxb2-basics</artifactId>
                            <version>0.12.0</version>
                        </plugin>
                        <plugin>
                            <groupId>org.jvnet.jaxb2_commons</groupId>
                            <artifactId>jaxb2-basics-annotate</artifactId>
                            <version>1.1.0</version>
                        </plugin>
						<!-- https://mvnrepository.com/artifact/net.java.dev.jaxb2-commons/jaxb-fluent-api -->
						<dependency>
						    <groupId>net.java.dev.jaxb2-commons</groupId>
						    <artifactId>jaxb-fluent-api</artifactId>
						    <version>2.1.8</version>
						</dependency>
                    </plugins>
                </configuration>
            </plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.8.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-integration</artifactId>
			<version>1.2.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.avh4.util/imagecomparison -->
		<dependency>
		    <groupId>net.avh4.util</groupId>
		    <artifactId>imagecomparison</artifactId>
		    <version>0.3.2</version>
		</dependency>
	</dependencies>
</project>
